# boxexplore

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
docs/: camera.md  representation.md
rust/boxcore/: Cargo.toml
rust/boxcore/src/: gfx.rs  lib.rs  mesh.rs  ops.rs  physics.rs  plan.rs  store.rs  wasm_api.rs
rust/boxcore/tests/: basic.rs
scripts/: verify.mjs
src/: build.ts  editor.ts  frame.ts  io.ts  main.ts  mat.ts  meshbuilder.ts  model.ts  paint.ts  palette.ts  planner.ts  play.ts  render.ts  sculpt.ts  style.css  tileset.ts  vec.ts  vertex.ts  viewport.ts  volume.ts  world.ts
src/wasm/: boxcore.d.ts  boxcore.js  boxcore_bg.wasm  boxcore_bg.wasm.d.ts
